{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 49,
  "lineage": "b574e23a-2471-bb98-d39c-8281ffb29879",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dc_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkInterfaces/dc-nic",
            "internal_domain_name_suffix": "qdfmfdmitzjehh0ph1ffko3qhe.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "DC-NicConfiguration",
                "primary": true,
                "private_ip_address": "192.168.10.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/publicIPAddresses/dc-public-ip",
                "subnet_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_servers"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-F5-B3-01",
            "name": "dc-nic",
            "private_ip_address": "192.168.10.10",
            "private_ip_addresses": [
              "192.168.10.10"
            ],
            "resource_group_name": "ncisglab-terraform",
            "virtual_machine_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Compute/virtualMachines/domain-controller"
          },
          "dependencies": [
            "azurerm_public_ip.dc_public_ip",
            "azurerm_resource_group.ncisglab",
            "azurerm_subnet.ncisglab_servers",
            "azurerm_virtual_network.intnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "wef_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkInterfaces/wef-nic",
            "internal_domain_name_suffix": "qdfmfdmitzjehh0ph1ffko3qhe.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "WEF-NicConfiguration",
                "primary": true,
                "private_ip_address": "192.168.10.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/publicIPAddresses/wef-public-ip",
                "subnet_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_servers"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-F5-B1-67",
            "name": "wef-nic",
            "private_ip_address": "192.168.10.20",
            "private_ip_addresses": [
              "192.168.10.20"
            ],
            "resource_group_name": "ncisglab-terraform",
            "virtual_machine_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Compute/virtualMachines/wef"
          },
          "dependencies": [
            "azurerm_public_ip.wef_public_ip",
            "azurerm_resource_group.ncisglab",
            "azurerm_subnet.ncisglab_servers",
            "azurerm_virtual_network.intnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ws_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkInterfaces/ws-nic",
            "internal_domain_name_suffix": "qdfmfdmitzjehh0ph1ffko3qhe.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "WS-NicConfiguration",
                "primary": true,
                "private_ip_address": "192.168.20.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/publicIPAddresses/ws-public-ip",
                "subnet_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_workstations"
              }
            ],
            "location": "westus2",
            "name": "ws-nic",
            "private_ip_address": "192.168.20.10",
            "private_ip_addresses": [
              "192.168.20.10"
            ],
            "resource_group_name": "ncisglab-terraform"
          },
          "dependencies": [
            "azurerm_public_ip.ws_public_ip",
            "azurerm_resource_group.ncisglab",
            "azurerm_subnet.ncisglab_workstations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ncisglab_servers_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkSecurityGroups/NCISGLab_servers_nsg",
            "location": "westus2",
            "name": "NCISGLab_servers_nsg",
            "resource_group_name": "ncisglab-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "WSSubnet",
                "priority": 1007,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.20.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "212.68.250.102/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "212.68.250.102/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985-5986",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "WinRM",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "212.68.250.102/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ncisglab_workstations_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkSecurityGroups/NCISGLab_workstations_nsg",
            "location": "westus2",
            "name": "NCISGLab_workstations_nsg",
            "resource_group_name": "ncisglab-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ServersSubnet",
                "priority": 1007,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.10.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "212.68.250.102/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "212.68.250.102/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985-5986",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "WinRM",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "212.68.250.102/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dc_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/publicIPAddresses/dc-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.250.0.234",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "dc-public-ip",
            "resource_group_name": "ncisglab-terraform",
            "sku": "Basic",
            "tags": {
              "role": "dc"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "wef_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/publicIPAddresses/wef-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.250.0.98",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "wef-public-ip",
            "resource_group_name": "ncisglab-terraform",
            "sku": "Basic",
            "tags": {
              "role": "wef"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ws_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/publicIPAddresses/ws-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.141.176.103",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ws-public-ip",
            "resource_group_name": "ncisglab-terraform",
            "sku": "Basic",
            "tags": {
              "role": "ws"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ncisglab_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.10.0/24",
            "address_prefixes": [
              "192.168.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_servers",
            "name": "subnet_servers",
            "resource_group_name": "ncisglab-terraform",
            "virtual_network_name": "internal_network"
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab",
            "azurerm_virtual_network.intnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ncisglab_workstations",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.20.0/24",
            "address_prefixes": [
              "192.168.20.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_workstations",
            "name": "subnet_workstations",
            "resource_group_name": "ncisglab-terraform",
            "virtual_network_name": "internal_network"
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab",
            "azurerm_virtual_network.intnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ncisglab_servers_nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_servers",
            "network_security_group_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkSecurityGroups/NCISGLab_servers_nsg",
            "subnet_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_servers"
          },
          "dependencies": [
            "azurerm_network_security_group.ncisglab_servers_nsg",
            "azurerm_resource_group.ncisglab",
            "azurerm_subnet.ncisglab_servers",
            "azurerm_virtual_network.intnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ncisglab_workstations_nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_workstations",
            "network_security_group_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkSecurityGroups/NCISGLab_workstations_nsg",
            "subnet_id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_workstations"
          },
          "dependencies": [
            "azurerm_network_security_group.ncisglab_workstations_nsg",
            "azurerm_resource_group.ncisglab",
            "azurerm_subnet.ncisglab_workstations",
            "azurerm_virtual_network.intnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "intnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "8dc2ca80-9e88-4352-9f4f-3eca553bb03c",
            "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network",
            "location": "westus2",
            "name": "internal_network",
            "resource_group_name": "ncisglab-terraform",
            "subnet": [
              {
                "address_prefix": "192.168.10.0/24",
                "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_servers",
                "name": "subnet_servers",
                "security_group": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkSecurityGroups/NCISGLab_servers_nsg"
              },
              {
                "address_prefix": "192.168.20.0/24",
                "id": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/virtualNetworks/internal_network/subnets/subnet_workstations",
                "name": "subnet_workstations",
                "security_group": "/subscriptions/3ed1bd30-7f5d-4de7-a59f-609afa2d1c98/resourceGroups/ncisglab-terraform/providers/Microsoft.Network/networkSecurityGroups/NCISGLab_workstations_nsg"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.ncisglab"
          ]
        }
      ]
    }
  ]
}